spacing issues

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,8 +1,3 @@
-#delete-me {
-    width: 50%;
-    line-height: 5rem;
-}
-
 /* =============== VARIABLES =============== */
 :root {
     /* colors */
@@ -16,7 +11,7 @@
 
     /* font sizes */
     --gigantic-font-size: 3rem;
-    --normal-font-size: .85rem;
+    --normal-font-size: .7rem;
 
     /* font weights */
     --h1-weight: 200;
@@ -38,7 +33,7 @@
     :root {
         /* font sizes */
         --gigantic-font-size: 8rem;
-        --normal-font-size: 1.2rem;
+        --normal-font-size: 1rem;
 
         /* misc */
         --general-padding: 6rem;
@@ -56,7 +51,7 @@
 
 a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--text-color-darker);
 }
 
 ul {
@@ -191,6 +186,7 @@ h1 {
     align-self: center;
     color: var(--text-color-darker);
     z-index: 2;
+    margin-left: -2rem;
 }
 
 #title-image {
@@ -240,3 +236,11 @@ h1 {
 .fade-very-slowly {
     transition: opacity 4s ease-in;
 }
+
+/* ========== MEDIA QUERIES ========== */
+/* laptop size */
+@media screen and (min-width: 1025px) {
+    #title-text {
+        margin-left: 6rem;
+    }
+} 
